# video-nugget

./: .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  VIDEO_NUGGET_README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: ci.yml  release.yml  test-coverage.yml
scripts/: release.sh
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_analyzer.rs  batch_processor.rs  ffmpeg_processor.rs  file_manager.rs  main.rs  project_manager.rs  speech_recognition.rs  video_processor.rs  youtube_api.rs  youtube_extractor.rs
src/components/: BatchProcessor.tsx  CommandPalette.tsx  DashboardStats.tsx  DesktopLayout.tsx  EnhancedVideoProcessor.tsx  Header.tsx  ProjectManager.tsx  SimpleVideoCard.tsx  VideoCard.tsx  VideoProcessor.tsx  VideoSubmissionForm.tsx
src/components/ui/: button.tsx
src/hooks/: useKeyboardShortcuts.ts
src/lib/: tauri-api-enhanced.ts  tauri-api.ts  tauri.ts
src/pages/: Config.tsx  Index.tsx
