[package]
name = "video-nugget"
version = "1.0.0"
description = "Video nugget extraction tool"
authors = ["You"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open", "fs-read-file", "fs-write-file"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
ffmpeg-next = "7.0"
tempfile = "3.8"
regex = "1.10"
url = "2.4"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
mockall = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]